# devops-terraform

./: .gitignore  LICENSE  README.md  publish_locally.sh  setup.cfg
devops/: clean-build.sh  unpublish-locally.sh
src/devstacks_devops_terraform/: __init__.py  generator.py
