[metadata]
name = devstacks_devops_terraform
version = 0.0.1
author = DevStacks Software Engineering
author_email = contact@devstacks.dev
description = Library to create terraform config files from Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/devstacks-dev/devops-terraform
project_urls =
    Bug Tracker = https://github.com/devstacks-dev/devops-terraform/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Code Generators
    Topic :: System :: Installation/Setup
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
